add favicon, tried changing bootloader

--- a/installer/firmware/esp32/v0.1/manifest.json
+++ b/installer/firmware/esp32/v0.1/manifest.json
@@ -8,7 +8,7 @@
       "chipFamily": "ESP32",
       "parts": [
         {
-          "path": "bootloader.bin",
+          "path": "bootloader_dio_80m.bin",
           "offset": 4096
         },
         {
